# N-body-simulation

./: CMakeLists.txt  LICENSE  README.md  nbody  nbody.cpp  nbody.py  nbody_baseline  nbody_baseline.cpp  nbody_baseline.py  nbody_omp  nbody_omp.cpp  nbody_output.csv  nbody_sim  nbody_simulation.cpp  numerical  numerical.c  output.csv  plot_nbody.py  plot_nbody_omp.py  visualize_3d.py
include/: nbody.hpp  oct_tree.hpp  quad_tree.hpp
src/: main.cpp  nbody.cpp  oct_tree.cpp  quad_tree.cpp
tests/: test_nbody.cpp
